--- a/templates/_base.html
+++ b/templates/_base.html
@@ -62,6 +62,7 @@
     {% endblock outer_content %}
 
     {{ JS.push('js/lib/jquery.js') }}
+    {{ JS.push('js/lib/pym.min.js') }}
     {{ JS.push('js/lib/underscore.js') }}
     {{ JS.push('js/lib/modernizr.js') }}
     {{ JS.push('js/lib/bootstrap.js') }}
