update visual page

--- a/less/app.less
+++ b/less/app.less
@@ -173,3 +173,15 @@ header {
     width: 80%;
     margin: 0px auto
 }
+
+ul.links {
+    text-align: left;
+
+    i.fa {
+        vertical-align: middle;
+    }
+
+    li:first-child {
+        padding-bottom: 10px;
+    }
+}
